--- a/Extended Set/README
+++ b/Extended Set/README
@@ -1,1 +1,2 @@
-In this folder
+In this folder, there are the scripts producing the results of the Extended Set. Each of the file has, at the start of its name, 
+the relative position in the sequence necessary to be followed to produce the results.
